phone-book-deployment/ui-deployment/src/ui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phone-book-client
  labels:
    app.kubernetes.io/name: phone-book-client
