phone-book-deployment/ui-deployment/src/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-book-ui-ingress
  namespace: phone-book-client
  labels:
    app.kubernetes.io/name: phone-book-client
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phone-book-ui-service
                port:
                  number: 8080
